fix: reduce excessive paragraph spacing in editor
- Change margin-top from 20px to 0.5em
- Change line-height from 1.6 to 1.5

--- a/src/components/tiptap-node/paragraph-node/paragraph-node.scss
+++ b/src/components/tiptap-node/paragraph-node/paragraph-node.scss
@@ -36,9 +36,9 @@
   // Paragraph spacing
   p:not(:first-child):not(td p):not(th p) {
     font-size: 1rem;
-    line-height: 1.6;
+    line-height: 1.5;
     font-weight: normal;
-    margin-top: 20px;
+    margin-top: 0.5em;
   }
 
   // Selection styles
